force-app/main/default/objects/Release_Playbook__c/Release_Playbook__c.object-meta.xml
<CustomObject>
    <label>Release Playbook</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Release Playbook Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Playbooks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>