force-app/main/default/objects/Release_Playbook__c/fields/Offcycle_Release_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Offcycle_Release_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offcycle Release Playbook</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Offcycle Release Playbooks</relationshipLabel>
    <relationshipName>Offcycle_Release_Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>