force-app/main/default/objects/Release_Playbook__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipLabel>Release Playbooks</relationshipLabel>
    <relationshipName>Release_Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>