force-app/main/default/objects/Release_Playbook__c/fields/Prod_Credential__c.field-meta.xml
<CustomField>
    <fullName>Prod_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prod Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Release Playbooks</relationshipLabel>
    <relationshipName>Release_Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>