force-app/main/default/objects/Release_Playbook__c/fields/Release_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_End_Date__c</fullName>
    <label>Release End Date</label>
    <type>DateTime</type>
</CustomField>