force-app/main/default/objects/Release_Playbook__c/fields/Release_Playbook_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Playbook_Name__c</fullName>
    <label>Release Playbook Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>