force-app/main/default/objects/Release_Playbook__c/fields/Release_Template__c.field-meta.xml
<CustomField>
    <fullName>Release_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release Template</label>
    <referenceTo>Release_Playbook__c</referenceTo>
    <relationshipLabel>Release Playbooks</relationshipLabel>
    <relationshipName>Release_Playbooks</relationshipName>
    <type>Lookup</type>
</CustomField>