force-app/main/default/objects/Release_Playbook__c/recordTypes/Release_Playbook.recordType-meta.xml
<RecordType>
    <fullName>Release_Playbook</fullName>
    <active>true</active>
    <label>Release Playbook</label>
</RecordType>