force-app/main/default/objects/Release_Playbook__c/recordTypes/Release_Playbook_Template.recordType-meta.xml
<RecordType>
    <fullName>Release_Playbook_Template</fullName>
    <active>true</active>
    <label>Release Playbook Template</label>
</RecordType>