force-app/main/default/objects/Release_Playbook__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Release_Playbook_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Pipeline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>