force-app/main/default/objects/Release_Playbook__c/listViews/Release_Playbook.listView-meta.xml
<ListView>
    <fullName>Release_Playbook</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Playbook__c.Release_Playbook</value>
    </filters>
    <label>Release Playbook</label>
</ListView>