force-app/main/default/objects/Release_Playbook__c/listViews/Release_Playbook_Template.listView-meta.xml
<ListView>
    <fullName>Release_Playbook_Template</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Release_Template__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Release_Playbook__c.Release_Playbook_Template</value>
    </filters>
    <label>Release Playbook Template</label>
</ListView>